Fix landing section being cut off on some screens

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ canvas {
 }
 
 .logo img {
-	width: 400px !important;
+	width: 300px !important;
 	max-width: 50%;
 }
 
